Finished:Testimonials, Clients, CTA, Footer Comp-s

--- a/hoo_bank/index.html
+++ b/hoo_bank/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="HooBank - The Next Generation Payment Method. You do the business, we'll handle the money."
+    />
     <title>HooBank</title>
   </head>
   <body>
