--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       content="HooBank - The Next Generation Payment Method. You do the business, we'll handle the money."
     />
     <title>HooBank</title>
-    <script type="module" crossorigin src="/assets/index.c723b341.js"></script>
-    <link rel="stylesheet" href="/assets/index.4d51d3a3.css">
+    <script type="module" crossorigin src="/HooBank/assets/index.c723b341.js"></script>
+    <link rel="stylesheet" href="/HooBank/assets/index.4d51d3a3.css">
   </head>
   <body>
     <div id="root"></div>
